--- a/Tagebuch/index.html
+++ b/Tagebuch/index.html
@@ -9,6 +9,7 @@
      <script>
         AFRAME.registerComponent('cursor-listener', {
             init: function () {
+                document.querySelector('a-scene').enterVR();
                 this.el.addEventListener('mouseenter', function () {
                     this.setAttribute('color', '#ff0000'); // Highlight color
                 });
