--- a/Tagebuch/index.html
+++ b/Tagebuch/index.html
@@ -58,7 +58,7 @@
     </script>
 </head>
 <body>
-    <a-scene>
+    <a-scene id="scene">
         <!-- Hintergrundmusik -->
         <a-assets>
             <audio id="background-music" src="sound/moschee.mp3" autoplay loop></audio>
