--- a/Tagebuch/index.html
+++ b/Tagebuch/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meine VR-Anwendung mit Textfeld, Buttons und 360-Grad-Bild</title>
-    <script src="main.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Vincenzooo/aframe-particle-system-component/dist/aframe-particle-system-component.min.js"></script>
      <script>
@@ -58,7 +57,7 @@
     </script>
 </head>
 <body>
-    <a-scene id="scene">
+    <a-scene>
         <!-- Hintergrundmusik -->
         <a-assets>
             <audio id="background-music" src="sound/moschee.mp3" autoplay loop></audio>
