--- a/Tagebuch/brunnen.html
+++ b/Tagebuch/brunnen.html
@@ -51,12 +51,12 @@
 
         <!-- Button 1 (Reingehen) -->
         <a-plane position="-1.4 0.4 -3" width="1.2" height="0.5" color="#D2B48C" img src="images/Papier.png" alt="Papier" shadow="receive: true" class="clickable" cursor-listener action="nextPage">
-            <a-text value="Reingehen" align="center" position="0 0 0"></a-text>
+            <a-text value="reingehen" align="center" position="0 0 0"></a-text>
         </a-plane> 
 
         <!-- Button 2 (Zurück) -->
         <a-plane position="1.4 0.4 -3" width="1.2" height="0.5" color="#D2B48C" img src="images/Papier.png" alt="Papier"  shadow="receive: true" class="clickable" cursor-listener action="changeColor">
-            <a-text value="back" align="center" position="0 0 0"></a-text>
+            <a-text value="zuruek" align="center" position="0 0 0"></a-text>
         </a-plane>
 
         <!-- Kamera mit Cursor -->
