--- a/Tagebuch/moschee-drinne1.html
+++ b/Tagebuch/moschee-drinne1.html
@@ -18,10 +18,10 @@
                     if (this.getAttribute('action') === 'nextPage') {
                         console.log('Button "weiter" wurde geklickt.');
                         // Nächste Szene aufrufen
-                        window.location.href = 'moschee-drinne2.html'; // Hier Pfad zur nächsten Szene eintragen
+                        window.location.href = 'moschee-drinne2.html'; // Hier Pfad zur nächsten Szene 
                     } else if (this.getAttribute('action') === 'changeColor') {
                         console.log('Button "back" wurde geklickt.');
-                        // Zurück zur vorherigen Seite navigieren (innerhalb des VR-Fensters)
+                        // Zurück zur vorherigen Seite navigieren 
                         window.history.back();
                     }
                 });
@@ -56,7 +56,7 @@
 
         <!-- Button 2 (Zurück) -->
         <a-plane position="1.4 0.4 -3" width="1.2" height="0.5" color="#D2B48C" img src="images/Papier.png" alt="Papier"  shadow="receive: true" class="clickable" cursor-listener action="changeColor">
-            <a-text value="back" align="center" position="0 0 0"></a-text>
+            <a-text value="zuruek" align="center" position="0 0 0"></a-text>
         </a-plane>
 
         <!-- Kamera mit Cursor -->
