--- a/Tagebuch/moschee-drinne1.html
+++ b/Tagebuch/moschee-drinne1.html
@@ -21,7 +21,7 @@
                         window.location.href = 'moschee-drinne2.html'; // Hier Pfad zur nächsten Szene 
                     } else if (this.getAttribute('action') === 'changeColor') {
                         console.log('Button "back" wurde geklickt.');
-                        // Zurück zur vorherigen Seite navigieren 
+                        // Zurück zur vorherigen Seite 
                         window.history.back();
                     }
                 });
@@ -31,35 +31,33 @@
 </head>
 <body>
     <a-scene>
-        <!-- Hintergrundmusik -->
+  
         <a-assets>
             <audio id="background-music" src="sound/mosque-22698.mp3" autoplay loop></audio>
             <img id="360-image" src="images/moscheedrinne2.jpg" alt="360 Grad Bild">
             <img id="textfeld-bild" src="images/Papier.png" alt="Textfeld Bild">
         </a-assets>
 
-        <!-- 360-Grad-Bild als Himmel -->
+  
         <a-sky src="#360-image"></a-sky>
 
-        <!-- Partikelsystem (Schnee als Test) -->
-        <a-entity particle-system="preset: snow; particleCount: 500; size: 1"></a-entity>
 
-        <!-- Textfeld -->
+       
         <a-plane position="0 1.6 -3" width="5" height="1.5" color="#D2B48C" shadow="receive: true" material="src: #textfeld-bild">
             <a-text value="Der Gebetsraum in einer Moschee ist der Ort, an dem die Glaebigen beten. Er ist nach Mekka ausgerichtet und enthaelt den Mihrab, der die Gebetsrichtung zeigt, und die Minbar, von der die Freitagspredigt gehalten wird." align="center" position="0 0.1 0" color="#FFFFFF"></a-text>
         </a-plane>
 
-        <!-- Button 1 (Reingehen) -->
+ 
         <a-plane position="-1.4 0.4 -3" width="1.2" height="0.5" color="#D2B48C" img src="images/Papier.png" alt="Papier" shadow="receive: true" class="clickable" cursor-listener action="nextPage">
             <a-text value="weiter" align="center" position="0 0 0"></a-text>
         </a-plane> 
 
-        <!-- Button 2 (Zurück) -->
+
         <a-plane position="1.4 0.4 -3" width="1.2" height="0.5" color="#D2B48C" img src="images/Papier.png" alt="Papier"  shadow="receive: true" class="clickable" cursor-listener action="changeColor">
             <a-text value="zuruek" align="center" position="0 0 0"></a-text>
         </a-plane>
 
-        <!-- Kamera mit Cursor -->
+    
         <a-camera position="0 1.6 0">
             <a-cursor raycaster="objects: .clickable"></a-cursor>
         </a-camera>
